# jmullan.regex_rename

./: README.md  pyproject.toml
src/jmullan/regexrename/: main.py
