[build-system]
requires = ["flit"]
build-backend = "flit_core.buildapi"


[project]
name = "jmullan.regexrename"
description = "Rename files using the power of regexes."
version = "0.0.1"
authors = [
  {name = "Jesse Mullan", email = "jmullan@gmail.com"}
]
maintainers = [
  {name = "Jesse Mullan", email = "jmullan@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT license"}
dependencies = [
]

[project.scripts]
regexrename="jmullan.regexrename.main:main"
